# zync

./: .env.example  .gitattributes  .gitignore  .setup.js  Cargo.toml  README.md  docker-compose.yml  nx.json  package-lock.json  package.json  schema.zync  tailwind.config.js  tsconfig.base.json  workspace.json  zync.yml
.github/workflows/: main.yml  npm.yml
.husky/: commit-msg
apps/backend/: Dockerfile  project.json
apps/backend/src/: main.ts
apps/backend/src/app/: app.module.ts
apps/cli/: Cargo.toml  project.json  typescript.ts  zync.yml
apps/cli/core/: index.ts  package.json  tsconfig.json
apps/cli/core/src/commands/: greet.ts
apps/cli/npm/: package.json.tmpl
apps/cli/npm/app/: package.json
apps/cli/npm/app/lib/: index.js
apps/cli/npm/app/src/: index.ts
apps/cli/src/: lib.rs  main.rs
apps/cli/src/commands/: generate.rs
apps/cli/src/languages/: mod.rs  prisma.rs  typescript.rs
apps/cli/src/utils/: config.rs  mod.rs  sample_data.rs
apps/landing/: .eslintrc.json  jest.config.ts  project.json  tsconfig.json
apps/landing-e2e/: project.json
apps/landing/specs/: index.spec.tsx
apps/www/: .eslintrc.json  project.json  tsconfig.json
apps/www-e2e/: project.json
docs/: class.md
libs/button/: jest.config.ts  project.json
libs/cli/: jest.config.ts  package.json  project.json
libs/cli/src/: index.ts
prisma/: schema.prisma  seed.ts
prisma/migrations/20220826091245_init/: migration.sql
prisma/migrations/20220827155844_added_properties_to_property/: migration.sql
prisma/migrations/20220830181341_got_rid_of_type_restriction/: migration.sql
prisma/migrations/20220909151750_made_description_field_optional/: migration.sql
prisma/migrations/20221128210508_init/: migration.sql
prisma/migrations/20221129203244_added_workspace_class_groups/: migration.sql
(+66 files in other folders)
