[package]
name = "cli"
authors = ["devkeystuff@protonmail.com"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
serde = {version = "1.0.145", features = ["serde_derive", "derive"]}
serde_yaml = "0.9.13"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["sync", "rt", "full"] }
indoc = "2.0.1"
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
convert_case = "0.6.0"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
